# scrapy-playwright

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: changelog.md
scrapy_playwright/: _utils.py  handler.py
tests/: __init__.py
tests/tests_asyncio/: test_playwright_requests.py
