[project]
name = "scrapy-playwright"
version = "0.0.47"
description = "Playwright integration for Scrapy"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Eugenio Lacuesta", email = "eugenio.lacuesta@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Scrapy",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "scrapy>=2.14.1",
    "playwright>=1.58",
]

[project.urls]
Homepage = "https://github.com/scrapy-plugins/scrapy-playwright"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scrapy_playwright"]

[tool.black]
line-length = 99

[tool.pytest.ini_options]
reruns = "2"

[tool.ruff]
line-length = 99
